# rustrip

./: .bandit  .gitignore  .gitlab-ci.yml  .semgrep.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  codeql.yml  mutants.yml  release.yml  semgrep.yml  test.yml
docs/: mutation-baseline.md  mutation-v0.1.0.md
examples/: README.md
scripts/: adversarial_test.py  adversarial_test.sh  build-fixtures.ps1  build-fixtures.sh  robustness_test.py
src/: binary.rs  lib.rs  main.rs
src/analyzers/: mod.rs  panics.rs  strings.rs  symbols.rs
src/output/: binja.rs  ghidra.rs  json.rs  mod.rs  table.rs
tests/: cli.rs  integration.rs  metamorphic.rs  property_tests.rs
tests/fixtures/: Cargo.toml  sample.rs
