[package]
name = "rustrip"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Make stripped Rust binaries readable again: recover slice-string boundaries, demangle symbols, and reconstruct panic source locations from release/stripped ELF/PE binaries."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rolanfreeman6-png/rustrip"
readme = "README.md"
keywords = ["reverse-engineering", "binary-analysis", "rust", "demangle", "malware"]
categories = ["development-tools::debugging", "parsing", "reverse-engineering"]


[lib]
name = "rustrip"
path = "src/lib.rs"

[[bin]]
name = "rustrip"
path = "src/main.rs"

[dependencies]
goblin = { version = "0.8", default-features = false, features = ["std", "elf32", "elf64", "pe32", "pe64", "mach32", "mach64"] }
rustc-demangle = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# These are stylistic suggestions that don't translate well to tooling
# that emits Python source strings — see inline `#[allow]` notes.
literal_string_with_formatting_args = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
